ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName30/input.ts.stderr
error: Computed property names are not allowed in enums
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName30/input.ts:4:5
  |
4 |     [e] = id++
  |     ^^

error: Expected ,, got Some([)
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName30/input.ts:5:5
  |
5 |     [e2] = 1
  |     ^

error: Computed property names are not allowed in enums
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName30/input.ts:5:5
  |
5 |     [e2] = 1
  |     ^^^

